// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStylePresetFromTheme getStylePresetFromTheme with interactive010 for xs, interactive020 for sm, and incorrect for md breakpoints 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: red;
}

.emotion-0:disabled {
  color: red;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    background-color: blue;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme getStylePresetFromTheme with interactive010 for xs, interactive020 for sm, and interactive030 for md breakpoints 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: red;
}

.emotion-0:disabled {
  color: red;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    background-color: blue;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    background-color: green;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme getStylePresetFromTheme with interactive010 for xs, interactive020 for sm, interactive030 for md, and interactive040 for lg breakpoints 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: red;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    background-color: blue;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    background-color: green;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    background-color: #FF00FF;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme getStylePresetFromTheme with interactive010 for xs, interactive020 for sm, interactive030 for md, interactive040 for lg breakpoints and ignore wrong prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: red;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    background-color: blue;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    background-color: green;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    background-color: #FF00FF;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme getStylePresetFromTheme with override to interactive040 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF00FF;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme iconButtonMinimalPrimary with current state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #00ff00;
  color: #0a68c1;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #0a68c1;
  color: #0a68c1;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme iconButtonMinimalPrimary with disabled and loading state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF0000;
  color: #c0c0c0;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #c0c0c0;
  color: #c0c0c0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme iconButtonMinimalPrimary with disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF0000;
  color: #c0c0c0;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #c0c0c0;
  color: #c0c0c0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme iconButtonMinimalPrimary with loading and current state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #ffff00;
  color: #0a68c1;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #0a68c1;
  color: #0a68c1;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme iconButtonMinimalPrimary with loading state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #ffff00;
  color: #0a68c1;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #0a68c1;
  color: #0a68c1;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme iconButtonMinimalPrimary without background-color styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #0a68c1;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #0a68c1;
  color: #0a68c1;
}

.emotion-0:disabled {
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
  color: #c0c0c0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme iconButtonMinimalPrimary without disabled state styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  color: #0a68c1;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #0a68c1;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme with default iconButtonMinimalPrimary style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  color: #0a68c1;
  border-radius: 50%;
}

.emotion-0 svg {
  fill: #0a68c1;
  color: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-0:active:not(:disabled) {
  background-color: #d5ebff;
}

.emotion-0:disabled {
  color: #c0c0c0;
}

.emotion-0:disabled svg {
  fill: #c0c0c0;
  color: #c0c0c0;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme with not existing style preset key returns empty fragment 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme with not existing style preset state returns empty fragment 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`getStylePresetFromTheme with stateOverwrites without base state fallbacks to empty object for base and returns empty fragment 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FFFF00;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
